@@ -2,6 +2,7 @@ Changes for 2.0.5rc1
 
 New features:
 A.F....... [ZBX-1357] updated Brazilian Portuguese, French and Russian translations; thanks to Zabbix translators (Richlv)
+.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle sql selects (dimir)
 
 Bug fixes:
 .......PS. [ZBX-3379] added SourceIP support for SNMP items (dimir)
